Fixed tiers display on mobile [✅]

--- a/app/src/assets/utility.css
+++ b/app/src/assets/utility.css
@@ -67,7 +67,7 @@ ul>li:before {
     top: -10px;
     opacity: 0;
     position: absolute;
-    z-index: 999;
+    z-index: 1000;
 }
 
 .tooltip-container:hover .tooltip {
